# fastpurge

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt
include/: fp_args.h  fp_scan.h  fp_types.h  fp_ui.h  fp_worker.h
src/: args.c  main.c  scan.c  ui.c  worker.c
